syntax = "proto3";
option java_multiple_files = true;
package com.vin.WareHouse;
import "inventory.proto";

service Deliveries{
  rpc changeStatus(ChangeStatusRequest) returns (StatusResponse);
}

message ChangeStatusRequest{
  string status=1;
  int64 orderId=2;
}